# My-Melody

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/application/dto/: jobs.py
app/application/ports/: audio_processor_port.py  job_repository_port.py  storage_port.py
app/application/use_cases/: download_result.py  get_job_status.py  submit_job.py
app/core/: config.py  logging.py  security.py
app/domain/: exceptions.py
app/domain/entities/: audio_job.py
app/domain/value_objects/: audio_id.py
app/infrastructure/ai/: dummy_processor.py  inference_service.py
app/infrastructure/jobstore/: file_repo.py  schema.py
app/infrastructure/queue/: celery_app.py  tasks.py
app/infrastructure/storage/: local_storage.py  s3_storage.py
app/presentation/api/: deps.py
app/presentation/api/routers/: jobs.py
app/presentation/schemas/: jobs.py
scripts/: dev_run.sh  init_fs.sh
